--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,8 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Hello CentralTable !</h1>
+            <h1>Hello Openshift !</h1>
+            <h1>Welcome CentralTable !</h1>
           </hgroup>
 
         <footer>
